--- a/package.json
+++ b/package.json
@@ -15,11 +15,19 @@
     "@fastify/cors": "^10.1.0",
     "@fastify/jwt": "^9.0.4",
     "@fastify/sensible": "^6.0.3",
+    "@google/genai": "^1.8.0",
+    "@google/generative-ai": "^0.24.1",
+    "@langchain/core": "^0.3.61",
+    "@langchain/google-genai": "^0.2.14",
+    "@langchain/textsplitters": "^0.1.0",
     "@prisma/client": "^6.4.1",
     "axios": "^1.8.1",
     "bcrypt": "^5.1.1",
+    "dotenv": "^17.0.1",
     "fastify": "^5.2.1",
+    "langchain": "^0.3.29",
     "nodemon": "^3.1.9",
+    "playwright": "^1.53.2",
     "uninstall": "^0.0.0"
   },
   "name": "surveybackend",
