--- a/package.json
+++ b/package.json
@@ -37,12 +37,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon ./index.ts",
-    "build": "npm i",
+    "build": "tsc",
+    "start": "node dist/index.js",
     "seed": "ts-node prisma/seed.ts",
     "postinstall": "prisma generate",
     "migrate": "prisma migrate dev --name init",
     "reset": "prisma migrate reset",
-    "git": "git add . && git commit -m \"$npm_config_m\" && git push origin master"
+    "git": "git add . && git commit -m \"$npm_config_m\" && git push origin master",
+    "vercel-build": "prisma generate && tsc"
   },
   "keywords": [],
   "author": "",
